feat(api): Add support for retrieving latest version of a schema
